Inicio y nosotros listo

--- a/archivos/css/tienda.css
+++ b/archivos/css/tienda.css
@@ -39,3 +39,12 @@
 .colorPurpura {
     color: #9443d6;
 }
+/* .altoCarrusel {
+    height: 500px !important;
+}
+.carousel-control-prev {
+    height: 500px !important;
+}
+.carousel-control-next {
+    height: 500px !important;
+} */
